# cse125-sp22-group1

./: .gitignore  DONT_FORGET_TO_DOWNLOAD_TRACKS.txt  README.md  config.example.yaml
chariot-client/: Cargo.toml  README.md
chariot-client/audio/: README.md
chariot-client/audio/ambient/: Space_01.aiff
chariot-client/audio/sfx/: Crash_01.aiff  Speed_Down_01.aiff
chariot-client/docs/: rendering.md
chariot-client/models/: baked.glb  chair.glb  racetrack.glb
chariot-client/shaders/: forward.wgsl  geometry.wgsl  geometry_acc_probes.wgsl  init_probes.wgsl  particle.wgsl  postprocess.wgsl  shade.wgsl  shade_direct.wgsl  shade_indirect.wgsl  surfel_geometry.wgsl  temporal_acc_probes.wgsl
chariot-client/src/: application.rs  audio.rs  client_events.rs  drawable.rs  game.rs  graphics.rs  main.rs  menu_input.rs  postprocess.wgsl  renderer.rs  resources.rs  shader.wgsl  ui_state.rs  util.rs
chariot-client/src/assets/: README.md  mod.rs  models.rs  shaders.rs
chariot-client/src/audio/: README.md  mod.rs  source.rs
chariot-client/src/drawable/: mod.rs  particle.rs  string.rs  technique.rs  util.rs
chariot-client/src/font/: glyph_cache.rs  mod.rs
chariot-client/src/renderer/: context.rs  mod.rs  reflection.rs  render_job.rs  util.rs
chariot-client/src/resources/: framebuffer.rs  glyph_cache.rs  material.rs  minimap.rs  mod.rs  static_mesh.rs  surfelize.rs
chariot-client/src/scenegraph/: components.rs  lib.rs  mod.rs  particle_system.rs
chariot-client/src/ui/: fonts.rs  mod.rs  string.rs  ui_region.rs
chariot-core/: Cargo.toml  README.md  questions.yaml
chariot-core/resources/: .gitignore
chariot-core/resources/models/: beanbag.glb  foldingchair.glb  swivel.glb
chariot-core/src/: entity_location.rs  hook.rs  lap_info.rs  lib.rs  packets.rs  physics_changes.rs  physics_object.rs  player_inputs.rs  questions.rs  settings.rs  sound_effect.rs
chariot-core/src/networking/: connection.rs  mod.rs  packets.rs  ws.rs
chariot-core/src/player/: choices.rs  lap_info.rs  mod.rs  player_inputs.rs
chariot-server/: Cargo.toml  README.md  certificate.pem  config.yaml  key.pem
chariot-server/models/: chair.glb  racetrack.glb
chariot-server/src/: chairs.rs  checkpoints.rs  game.rs  main.rs  map.rs  physics.rs  progress.rs
chariot-server/src/game/: interactions.rs  map.rs  mod.rs  phase.rs  voting.rs
chariot-server/src/physics/: bounding_box.rs  collisions.rs  constants.rs  mod.rs  physics_changes.rs  physics_loop.rs  player_entity.rs  ramp.rs  stats_changes.rs  tests.rs  trigger_entity.rs
chariot-server/src/web_sockets/: mod.rs  (+2 more)
(+91 files in other folders)
