[package]
name = "chariot-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chariot-core = { path = "../chariot-core" }
wgpu = "0.12.0" 
naga = "0.8.5"
winit = "0.26.1"
pollster = "0.2.5"
bytemuck = { version = "1.4", features = ["derive"] }
glam = "0.20.3"
gltf = "1.0.0"
image = "0.24.2"
rand = "0.8.5"