[package]
name = "chariot-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20.3"
chariot-core = { path = "../chariot-core" }
gltf = { version = "1.0.0", features = ["extras"] }
serde_json = "1.0"

[profile.release]
lto = "fat"